--- a/gameecommerce-backend/src/main/resources/application.yaml
+++ b/gameecommerce-backend/src/main/resources/application.yaml
@@ -1,5 +1,3 @@
-#spring.application.name=gameecommerce-backend
-
 spring:
   application:
     name: GameEcommerce
@@ -7,7 +5,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
 
   h2:
     console:
@@ -16,7 +14,7 @@ spring:
 
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:file:~/db;DB_CLOSE_DELAY=-1;MODE=MYSQL
+    url: jdbc:h2:file:~/db;DB_CLOSE_DELAY=-1
     username: user
     password: password
 
