--- a/gameecommerce-backend/src/main/resources/application.yaml
+++ b/gameecommerce-backend/src/main/resources/application.yaml
@@ -1,6 +1,10 @@
+
 spring:
   application:
     name: GameEcommerce
+
+  profiles:
+    active: test
 
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
