--- a/gameecommerce-backend/src/main/resources/application.yaml
+++ b/gameecommerce-backend/src/main/resources/application.yaml
@@ -1,4 +1,3 @@
-
 spring:
   application:
     name: GameEcommerce
@@ -23,4 +22,7 @@ spring:
     password: password
 
 
+cors:
+  allowed-origins:
+    - 'http://localhost:3000'
 
