--- a/gameecommerce-backend/build.gradle
+++ b/gameecommerce-backend/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.jetbrains:annotations:24.1.0'
     implementation 'org.springframework.modulith:spring-modulith-starter-core'
     implementation 'jakarta.validation:jakarta.validation-api:3.1.0-M2'
