--- a/gameecommerce-backend/src/main/resources/application.yaml
+++ b/gameecommerce-backend/src/main/resources/application.yaml
@@ -2,8 +2,6 @@ spring:
   application:
     name: GameEcommerce
 
-  profiles:
-    active: test
 
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
@@ -17,7 +15,7 @@ spring:
 
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:file:~/db;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:file:./database/db
     username: user
     password: password
 
