--- a/gameecommerce-frontend/package.json
+++ b/gameecommerce-frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "core-js": "^3.34.0",
+    "js-cookie": "^3.0.5",
     "roboto-fontface": "*",
     "vue": "^3.4.0",
     "vuetify": "^3.5.0"
